# E-cmo-llm

./: .env.example  .gitignore  data_scripe.py  ecommerce_sft_rules_v1.json  ecommerce_sft_v1.json  pyproject.toml  run_ablation.sh  run_final_sft.sh  run_small_dpo.sh  run_smoke_m1.sh  run_train_eval.sh  setup_uv.sh
configs/: high_value_rules.json
data/: split_meta.json  test.json  train.json  val.json
data/dpo/: small_dpo_pairs_v1.json  small_dpo_pairs_v2.json
data/final/: meta.json  test.json  train.json  val.json
data/final_clean/: cleaning_report.json  test.json  train.json  val.json
data/final_v2/: meta.json  train.json  val.json
data/final_v2_minimal_pair/: meta.json  train.json  val.json
data/final_v3/: meta.json  train.json  val.json
data/final_v4_clean/: cleaning_report.json  train.json  val.json
data/final_v5_stable/: cleaning_report.json  test.json  train.json  val.json
data/targeted/: minimal_pair_targeted_v1.json  overpromise_targeted_v1.json  precision_targeted_v1.json
docs/: data_design.md  evaluation_design.md
scripts/: audit_supervision_consistency.py  build_final_dataset.py  build_small_dpo_dataset.py  build_small_dpo_dataset_v2.py  build_targeted_minimal_pair_dataset.py  build_targeted_overpromise_dataset.py  build_targeted_precision_dataset.py  clean_conflicting_outputs.py  clean_final_dataset.py  clean_weak_subtasks.py  dataset_schema.py  evaluate.py  merge_targeted_into_clean.py  split_dataset.py  train_dpo.py  train_sft.py
